fixed html links

--- a/README.adoc
+++ b/README.adoc
@@ -12,8 +12,9 @@ The intention of this effort is to support the update of these profiles, includi
 
 - SAML V2.0 Implementation Profile for Federation Interoperability [FedIopProfile]
   Updated recommendation  to replace the Kantara eGov Implementation Profile
-  https://kantarainitiative.github.io/SAMLprofiles/fedinterop.html[draft document]
-  https://kantarainitiative.github.io/SAMLprofiles/egov-profile-diff.html[differences to eGov profile]
+
+  - https://kantarainitiative.github.io/SAMLprofiles/fedinterop.html[draft document]
+  - https://kantarainitiative.github.io/SAMLprofiles/egov-profile-diff.html[differences to eGov profile]
 - Kantara eGov Implementation Profile SAML2.0 (V2.0bis)
   This document is a transformation of the document from 11 June 2011 into the Asciidoc format. With the intention to keep the essential contents, the format was changed to make it comparable to the newer FedIopProfile.
 
