--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,5 @@
 # SAML conformance profiles
+
 ## Objective
 Modernize the SAML profiles to be used in higher education, e-Government and industry with a focus on WebSSO.
 Taking the input from the InCommon Federation Interoperability WG a new profile has been created, extending existing ones:
@@ -11,16 +12,16 @@ The intention of this effort is to support the update of these profiles, includi
 ## Contents
 
 - SAML V2.0 Implementation Profile for Federation Interoperability [FedIopProfile]
-  Updated recommendation  to replace the Kantara eGov Implementation Profile
+  Updated recommendation  to replace the Kantara eGov Implementation Profile:
 
-  - https://kantarainitiative.github.io/SAMLprofiles/fedinterop.html[draft document]
-  - https://kantarainitiative.github.io/SAMLprofiles/egov-profile-diff.html[differences to eGov profile]
+  ** https://kantarainitiative.github.io/SAMLprofiles/fedinterop.html[draft document]
+  ** https://kantarainitiative.github.io/SAMLprofiles/egov-profile-diff.html[differences to eGov profile]
 - Kantara eGov Implementation Profile SAML2.0 (V2.0bis)
   This document is a transformation of the document from 11 June 2011 into the Asciidoc format. With the intention to keep the essential contents, the format was changed to make it comparable to the newer FedIopProfile.
 
-## View resulting documents
+  ** https://kantarainitiative.github.io/SAMLprofiles/eGovImplProfile.html[SAML eGov Implementation Provile V2.0bis]
 
-## Tooling
+## Editing & Tooling
 Document parts in the repository are written in Asciidoc. The recommended toolchain is:
 - Create a fork of the system or get access to the upstream repo
 - Clone the master branch of repository to your local system
@@ -38,5 +39,5 @@ Document parts in the repository are written in Asciidoc. The recommended toolch
 
   git commit -m 'why/what I changed' && git push
 
-- The output will appear with a delay of a few seconds (up to a few minutes) at the github.io address
+- The output will appear with a delay of a few seconds (up to a few minutes) at the github.io addresses
   as described above.
