--- a/README.adoc
+++ b/README.adoc
@@ -14,12 +14,12 @@ The intention of this effort is to support the update of these profiles, includi
 - SAML V2.0 Implementation Profile for Federation Interoperability [FedIopProfile]
   Updated recommendation  to replace the Kantara eGov Implementation Profile:
 
-  ** https://kantarainitiative.github.io/SAMLprofiles/fedinterop.html[draft document]
+  ** https://kantarainitiative.github.io/SAMLprofiles/fedinterop.html[FedIopProfile draft]
   ** https://kantarainitiative.github.io/SAMLprofiles/egov-profile-diff.html[differences to eGov profile]
 - Kantara eGov Implementation Profile SAML2.0 (V2.0bis)
   This document is a transformation of the document from 11 June 2011 into the Asciidoc format. With the intention to keep the essential contents, the format was changed to make it comparable to the newer FedIopProfile.
 
-  ** https://kantarainitiative.github.io/SAMLprofiles/eGovImplProfile.html[SAML eGov Implementation Provile V2.0bis]
+  ** https://kantarainitiative.github.io/SAMLprofiles/eGovImplProfile.html[eGov Implementation Provile V2.0bis]
 
 ## Editing & Tooling
 Document parts in the repository are written in Asciidoc. The recommended toolchain is:
