Proposed SSO profile changes to make feature support more explicit

--- a/edit/fedinterop/messages.adoc
+++ b/edit/fedinterop/messages.adoc
@@ -18,3 +18,5 @@
 _Note that the above requires that most metadata elements identified in <<SAML2Prof>> section 4.1.6 must be configurable via SAML metadata. It only applies, however, to functionality that is supported in a given implementation. For example, if an implementation allows a deployer to control AttributeProfile configuration values, that implementation MUST support the configuration of these values via the_ `<md:AttributeProfile>` _element. This requirement by itself does not necessitate attribute profile support._
 
 _This requirement does not prevent implementations from offering additional mechanisms for deployers to set or modify SAML peer configuration values. For example, it is acceptable to allow deployers a choice between manual peer configuration and metadata-based configuration, to provide them with the ability to override values found in metadata, or to add options in the peer configuration that cannot be expressed via SAML metadata._
+
+[IIP-SSO07]:: Unless specifically called out by subsequent requirements in this profile, it is OPTIONAL for implementations to support the inclusion of optional elements and attributes in the protocol messages and assertions issued. It is REQUIRED that implementations successfully process messages and assertions containing any optional content they do not support (i.e., such content MUST either result in errors or be ignored, as directed by the processing rules for the element or attribute in <<SAML2Core>>).
