--- a/edit/egov-impl/main.adoc
+++ b/edit/egov-impl/main.adoc
@@ -21,7 +21,7 @@ Editor of this document format: Rainer Hörbe
 == Introduction
 include::001_Intro_eGov.adoc[]
 include::002_Notation_eGov.adoc[]
-include::003_Changes_eGov.adoc[]
+include::003_changes_eGov.adoc[]
 
 == SAML V2.0 Implementation Profile
 === Required Information
