Text from Scott. Approved on call.

--- a/edit/fedinterop/messages.adoc
+++ b/edit/fedinterop/messages.adoc
@@ -20,3 +20,5 @@ _Note that the above requires that most metadata elements identified in <<SAML2P
 _This requirement does not prevent implementations from offering additional mechanisms for deployers to set or modify SAML peer configuration values. For example, it is acceptable to allow deployers a choice between manual peer configuration and metadata-based configuration, to provide them with the ability to override values found in metadata, or to add options in the peer configuration that cannot be expressed via SAML metadata._
 
 [IIP-SSO07]:: Unless specifically called out by subsequent requirements in this profile, it is OPTIONAL for implementations to support the inclusion of optional elements and attributes in the protocol messages and assertions issued. It is REQUIRED that implementations successfully process messages and assertions containing any optional content they do not support (i.e., such content MUST either result in errors or be ignored, as directed by the processing rules for the element or attribute in <<SAML2Core>>).
+
+_For example, the `<saml:Subject>` and `<saml:Conditions>` elements are optional elements that may appear in a `<samlp:AuthnRequest>` message, and it is therefore optional for an SP implementation to support their inclusion in requests. They have differing semantics for the IdP: the former has required semantics and the latter optional semantics. As such, an implementation that receives a `<saml:Subject>` may ignore it, but must return an error in so doing, whereas an implementation that receives a `<saml:Conditions>` element may also ignore it, but is under no additional obligation._
