Wordsmithing. Discussed on call.

--- a/edit/fedinterop/idp.adoc
+++ b/edit/fedinterop/idp.adoc
@@ -14,7 +14,7 @@
 
 [IIP-IDP05]:: Identity Providers MUST be capable of determining whether or not to include specific SAML attributes (or specific values) in a response based on the presence of `<mdattr:EntityAttributes>` extension elements <<MetaAttr>> found in the metadata for a relying party.
 
-[IIP-IDP06]:: Identity Providers MUST be capable of determining whether or not to include specific SAML attributes (or specific values) in a response based on the presence of `<md:AttributeConsumingService>` elements (containing `<md:RequestedAttribute>` elements) found in the metadata for a relying party, including the value of the enclosed `isRequired` XML attribute. They MUST also support the `AttributeConsumingServiceIndex` attribute in `<saml2p:AuthnRequest>` messages as defined in <<SAML2Core>>.
+[IIP-IDP06]:: Identity Providers MUST be capable of determining whether or not to include specific SAML attributes (or specific values) in a response based on the presence of `<md:AttributeConsumingService>` elements (containing `<md:RequestedAttribute>` elements) found in the metadata for a relying party, including the value of the enclosed `isRequired` XML attribute. Accordingly, they MUST support the `AttributeConsumingServiceIndex` attribute in `<saml2p:AuthnRequest>` messages as a means of determining the appropriate `<md:AttributeConsumingService>` element to process.
 
 _<md:RequestedAttribute> elements in metadata can be used to help automate attribute release configurations in IdP deployments. An IdP could, for instance, be configured to release attributes requested in metadata, typically in combination with other criteria. Example criteria include the acquisition of user consent and/or the presence of a particular qualifying entity attribute (see IIP-IDP04) for the relying party._
 
