--- a/edit/fedinterop/metadata-trust.adoc
+++ b/edit/fedinterop/metadata-trust.adoc
@@ -4,15 +4,17 @@ This section identifies a basic set of features required for the interoperable u
 
 The underlying intent of these requirements is to facilitate a configuration and provisioning model that is, to the greatest extent practical, based on metadata alone.
 
+The requirements are divided into to general categories: exchange and usage. Unless otherwise specified, requirements around the verification and use of metadata apply regardless of what means of exchange is used in a particular case.
+
 ==== Metadata Exchange
 
-[IIP-MD01]:: Identity Providers MUST and Service Providers SHOULD support the acquisition of SAML metadata rooted in `<md:EntityDescriptor>` elements via the Metadata Query Protocol, defined in <<SAML-MDQ>> and <<MDQ>>. Implementations that claim support for this protocol MUST be able to request and utilize metadata from one or more MDQ responders for any peer entity from which a SAML protocol message is received. 
+[IIP-MD01]:: Identity Providers MUST and Service Providers SHOULD support the acquisition of SAML metadata rooted in `<md:EntityDescriptor>` elements via the Metadata Query Protocol, defined in <<SAML-MDQ>> and <<MDQ>>. Implementations that claim support for this protocol MUST be able to request and utilize metadata from one or more MDQ responders for any peer entity from which a SAML protocol message is received.
 
-[IIP-MD02]:: Implementations MUST support the routine consumption of SAML metadata from a remote location via HTTP/1.1 <<RFC2616>> on a scheduled/recurring basis, with the contents automatically applied upon successful validation. HTTP/1.1 redirects (status codes 301, 302, and 307) MUST be honored.
+[IIP-MD02]:: Implementations MUST support the routine consumption of SAML metadata from a remote location via HTTP/1.1 <<RFC2616>> on a scheduled/recurring basis, with the contents automatically applied upon successful validation. HTTP/1.1 redirects (status codes 301, 302, and 307) MUST be honored. Implementations MUST support the consumption of SAML metadata rooted in both `<md:EntityDescriptor>` and `<md:EntitiesDescriptor>` elements by this mechanism. In the latter case, any number of child elements MUST be allowed.
 
-[IIP-MD03]:: Implementations MUST be able to validate the authenticity and integrity of SAML metadata by verifying an enveloped XML Signature <<XMLDsig>> attached to the root element of the metadata. Public keys used for signature verification MUST be configured out of band. These keys MAY be contained in X.509 certificates but it MUST be possible to ignore the other contents of the certificate and verify the XML Signature based solely on the public key. It MUST be possible to limit the use of a trusted key to a single metadata source.
+_This approach is less flexible than the on-demand model supported by <<MDQ>>, and has scalability issues with larger metadata aggregates, but is required for compatibility with federations that have not begun offering newer approaches, and addresses common Service Provider needs around the IdP discovery process. This requirement will be reevaluated in a future revision of this profile._
 
-_Note that this requirement applies regardless of the means by which the metadata was obtained (scheduled transfer over HTTP/1.1, Metadata Query Protocol, etc)._
+[IIP-MD03]:: Implementations MUST be able to validate the authenticity and integrity of SAML metadata by verifying an enveloped XML Signature <<XMLDsig>> attached to the root element of the metadata. Public keys used for signature verification of the metadata MUST be configured out of band. These keys MAY be contained in X.509 certificates but it MUST be possible to ignore the other contents of the certificate and verify the XML Signature based solely on the public key. It MUST be possible to limit the use of a trusted key to a single metadata source.
 
 [IIP-MD04]:: Implementations MUST be capable of rejecting SAML metadata if any one of the following conditions is true:
 
@@ -22,7 +24,7 @@ _Note that this requirement applies regardless of the means by which the metadat
 
 _Note that this requirement applies to the root element only. If the root element encloses any child elements containing additional `validUntil` XML attributes, these must be processed in accordance with <<SAML2Meta>>._
 
-==== Metadata Capabilities
+==== Metadata Usage
 
 [IIP-MD05]:: Implementations MUST support SAML Metadata as defined in the following OASIS specifications:
  * SAML V2.0 Metadata <<SAML2Meta>>, as updated by Errata <<SAML2Errata>>
@@ -34,9 +36,7 @@ _Note that this requirement applies to the root element only. If the root elemen
 
 The above list of specifications includes all material relevant to functionality required by this profile, but is not intended to be exhaustive. In accordance with the <<Extensibility>> section, other metadata extension content may be present and MUST NOT prevent consumption and use of the metadata.
 
-[IIP-MD06]:: Implementations MUST support the consumption of SAML metadata rooted in both `<md:EntityDescriptor>` and `<md:EntitiesDescriptor>` elements. In the latter case, any number of child elements MUST be allowed.
-
-[IIP-MD07]:: Regardless of the means by which metadata was obtained, implementations MUST support the interpretation and application of metadata as defined by the SAML V2.0 Metadata Interoperability Profile <<SAML2MDIOP>>. It follows that implementations MUST be capable of interoperating (leading to success or failure as dictated by default configuration) with any number of SAML peers for which metadata is supplied, without additional inputs or separate configuration. In accordance with the SAML V2.0 Metadata Interoperability Profile <<SAML2MDIOP>>, metadata MUST be:
+[IIP-MD06]:: Implementations MUST support the interpretation and application of metadata as defined by the SAML V2.0 Metadata Interoperability Profile <<SAML2MDIOP>>. It follows that implementations MUST be capable of interoperating (leading to success or failure as dictated by default configuration) with any number of SAML peers for which metadata is available, without additional inputs or separate configuration. In accordance with the SAML V2.0 Metadata Interoperability Profile <<SAML2MDIOP>>, metadata MUST be:
 
 ----
 “usable as a self-contained vehicle for communicating trust such that a user of a conforming implementation can be guaranteed that any and all rules for processing digital signatures, encrypted XML... can be derived from the metadata alone, with no additional trust requirements imposed.”
@@ -46,28 +46,28 @@ _As an example, a separate trust store must not be required to verify the signat
 
 _Note that this requirement does not preclude supporting a variety of configuration options on a per-peer (or other) basis; it simply requires that default behavior be possible without such._
 
-==== Key Rollover
+===== Key Rollover
 
-[IIP-MD08]:: Implementations MUST have the ability to consume and make use of any number of signing keys bound to a single role descriptor in metadata. When verifying digital signatures, they MUST attempt to use each signing key (in unspecified order) until the signature is successfully verified or there are no remaining keys, in which case signature verification fails.
+[IIP-MD07]:: Implementations MUST have the ability to consume and make use of any number of signing keys bound to a single role descriptor in metadata. When verifying digital signatures, implementations MUST attempt to use each signing key (in unspecified order) until the signature is successfully verified or there are no remaining keys, in which case signature verification fails.
 
-[IIP-MD09]:: If an implementation supports outbound encryption, it MUST be able to consume any number of encryption keys bound to a single role descriptor in metadata. If multiple encryption keys are specified, any one of them may be used to encrypt outbound messages.
+[IIP-MD08]:: If an implementation supports outbound encryption, it MUST be able to consume any number of encryption keys bound to a single role descriptor in metadata. If multiple encryption keys are specified, any one of them may be used to encrypt outbound messages.
 
-==== Algorithm Support
+===== Algorithm Support
 
-The migration from suspicious and broken algorithms deployed in production systems requiring a coordinated update at a single point in time is not feasible in large federations. An alternative strategy is the support of both good and bad algorithms at the endpoints for some time to relax the schedule for system updates. Negotiating better algorithms automatically provides immediate benefit to communications within the group of updated entities. Thus the network as a whole is not completely stuck because of entity operators unable/unwilling to update. Algorithm support for TLS endpoints is out of scope for SAML metadata.
+The migration from suspicious and broken algorithms deployed in production systems requiring a coordinated update at a single point in time is not feasible in large federations. An alternative strategy is the support of both good and bad algorithms at the endpoints for some time to relax the schedule for system updates. Negotiating better algorithms automatically provides immediate benefit to communications within the group of updated entities. Thus the network as a whole is not completely held back because of entity operators unable/unwilling to update. Algorithm support for TLS endpoints is out of scope for SAML metadata.
 
-[IIP-MD10]:: Implementations MUST be capable of publishing the cryptographic capabilities of their runtime configurations with regard to XML Signature and Encryption. It is RECOMMENDED that they support dynamic generation and export of this information and provide it in a machine-readable format that can be included in metadata according to <<SAML2MetaAlgSup>>.
+[IIP-MD09]:: Implementations MUST be capable of publishing the cryptographic capabilities of their runtime configurations with regard to XML Signature and Encryption. It is RECOMMENDED that they support dynamic generation and export of this information and provide it in a machine-readable format that can be included in metadata according to <<SAML2MetaAlgSup>>.
 
-[IIP-MD11]:: If a SAML peer has declared algorithm support according to <<SAML2MetaAlgSup>> in its EntityDescriptor, Identity providers MUST and Service Providers SHOULD limit the use of algorithms for XML Signature and Encryption to these declared algorithms in the messages they produce for that peer.
+[IIP-MD10]:: If a SAML peer has declared algorithm support according to <<SAML2MetaAlgSup>> in its metadata, Identity providers MUST and Service Providers SHOULD limit the use of algorithms for XML Signature and Encryption to these declared algorithms in the messages they produce for that peer.
 
-==== Avoiding Common Errors
+===== Avoiding Common Errors
 
-[IIP-MD12]:: An `<md:KeyDescriptor>` element in metadata that contains no `use` XML attribute MUST be valid as both a signing and encryption key. This is clarified in E62 of the SAML V2.0 Errata <<SAML2Errata>>:
+[IIP-MD11]:: An `<md:KeyDescriptor>` element in metadata that contains no `use` XML attribute MUST be valid as both a signing and encryption key. This is clarified in E62 of the SAML V2.0 Errata <<SAML2Errata>>:
 ----
 If the use attribute is omitted, then the contained key information is applicable to both of the above uses.
 ----
 
-[IIP-MD13]:: Support for any number of long-lived, self-signed end entity certificates is REQUIRED as is support for expired certificates, and certificates signed with any digest algorithm.  The SAML V2.0 Metadata Interoperability Profile <<SAML2MDIOP>> states:
+[IIP-MD12]:: Support for any number of long-lived, self-signed end entity certificates is REQUIRED as is support for expired certificates, and certificates signed with any digest algorithm. The SAML V2.0 Metadata Interoperability Profile <<SAML2MDIOP>> states:
 
 ----
 In the case of an X.509 certificate, there are no requirements as to the content of the certificate apart from the requirement that it contain the appropriate public key. Specifically, the certificate may be expired, not yet valid, carry critical or non-critical extensions or usage flags, and contain any subject or issuer. The use of the certificate structure is merely a matter of notational convenience to communicate a key and has no semantics in this profile apart from that.
