--- a/edit/fedinterop/metadata-trust.adoc
+++ b/edit/fedinterop/metadata-trust.adoc
@@ -12,7 +12,7 @@ The requirements are divided into to general categories: exchange and usage. Unl
 
 [IIP-MD02]:: Implementations MUST support the routine consumption of SAML metadata from a remote location via HTTP/1.1 <<RFC2616>> on a scheduled/recurring basis, with the contents automatically applied upon successful validation. HTTP/1.1 redirects (status codes 301, 302, and 307) MUST be honored. Implementations MUST support the consumption of SAML metadata rooted in both `<md:EntityDescriptor>` and `<md:EntitiesDescriptor>` elements by this mechanism. In the latter case, any number of child elements MUST be allowed.
 
-_This approach is less flexible than the on-demand model supported by <<MDQ>>, and has scalability issues with larger metadata aggregates, but is required for compatibility with federations that have not begun offering newer approaches, and addresses common Service Provider needs around the IdP discovery process. This requirement will be reevaluated in a future revision of this profile._
+_This approach is less flexible than the on-demand model supported by <<MDQ>> and has scalability issues with larger metadata aggregates. It is required, however, for compatibility with federations that have not begun offering newer approaches and addresses common Service Provider needs around the IdP discovery process. This requirement will be reevaluated in a future revision of this profile._
 
 [IIP-MD03]:: Implementations MUST be able to validate the authenticity and integrity of SAML metadata by verifying an enveloped XML Signature <<XMLDsig>> attached to the root element of the metadata. Public keys used for signature verification of the metadata MUST be configured out of band. These keys MAY be contained in X.509 certificates but it MUST be possible to ignore the other contents of the certificate and verify the XML Signature based solely on the public key. It MUST be possible to limit the use of a trusted key to a single metadata source.
 
