add saml2int link

--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ The intention of this effort is to support the update of these profiles, includi
 - Kantara eGov Implementation Profile SAML2.0 (V2.0bis)
   This document is a transformation of the document from 11 June 2011 into the Asciidoc format. With the intention to keep the essential contents, the format was changed to make it comparable to the newer FedIopProfile.
 
-  ** https://kantarainitiative.github.io/SAMLprofiles/eGovImplProfile.html[eGov Implementation Provile V2.0bis]
+  ** https://kantarainitiative.github.io/SAMLprofiles/saml2int.html[SAML2int SAML 2.0 WebSSO Deployment Profile]
 
 ## Editing & Tooling
 Document parts in the repository are written in Asciidoc. The recommended toolchain is:
