Added MACEDir SAML Attribute Profiles

--- a/edit/saml2int/references.adoc
+++ b/edit/saml2int/references.adoc
@@ -21,3 +21,4 @@
 - [[[eduPerson]]] eduPerson Object Class Specification. https://www.internet2.edu/products-services/trust-identity/eduperson-eduorg/
 - [[[eduOrg]]] EduOrg Object Class Specification. https://www.internet2.edu/products-services/trust-identity/eduperson-eduorg/
 - [[[IMI]]] OASIS Standard, Identity Metasystem Interoperability Version 1.0, July 2009. http://docs.oasis-open.org/imi/identity/v1.0/identity.html
+- [[[MACEAttrProf]]] MACEDir Working Group Specification, MACEDir SAML Attribute Profiles, April 2008. http://macedir.org/docs/internet2-mace-dir-saml-attributes-latest.pdf
