Added to contributors list

--- a/edit/saml2int/contributors.adoc
+++ b/edit/saml2int/contributors.adoc
@@ -8,3 +8,10 @@
 * Ian Young, ian@iay.org.uk
 * Nate Klingenstein, ndk@internet2.edu
 * Bob Morgan, rlmorgan@washington.edu 
+* Keith Wessel, kwessel@illinois.edu
+* Eric Goodman, eric.goodman@ucop.edu
+* Andrew Morgan, morgan@orst.edu
+* Judith Bush, bushj@oclc.org
+* Thomas Lenggenhager, lenggenhager@switch.ch
+* Alex Stuart, alex.stuart@jisc.ac.uk
+* Nick Roy, nroy@internet2.edu
